# wakit

./: .clangd  .gitignore  AUTHORS  meson.build  meson.native  meson.options  tsconfig.json  version.py
example/: .gitignore  .npmrc  app.ts  app.tsx  application.c  application.cc  application.vala  babel.config.cjs  bundle.xml  eslint.config.mjs  index.html  index.ts  index.tsx  interface.vala  jsconfig.json  meson.build  module.vala  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  routes.ts  runner.sh.in  theme.ts  tsconfig.json  wakit.config.json  webpack.base.ts  webpack.config.ts
example/assets/: index.html  resources.xml
example/components/: App.module.css  App.tsx  AppIcon.tsx  Home.tsx  Router.tsx
example/hooks/: useFormQuery.ts  useImage.tsx
example/pages/: home.tsx
example/parts/Error/: Catch.tsx  Display.tsx  Overlay.tsx  index.tsx
example/parts/Shell/: Brand.tsx  Controls.tsx  Header.tsx  index.tsx  style.module.css
example/routes/: __root.tsx  index.tsx
example/types/: api.d.ts  css-modules.d.ts
src/busmaster/: application.c  application.vala  configuration.vala  meson.build
src/busmaster/bus/: bus.vala  client.vala  clientfilter.vala  flags.vala  match.cc  match.h  match.vala  matchelement.vapi  matchmatches.cc  matchparse.cc  meson.build  name.vala  nameowner.vala  server.vala
src/busmaster/transport/: meson.build  server.vala  unixsocket.vapi
src/common/: asyncdelay.cc  asyncdelay.h  asyncdelay.vala  asynclock.cc  boxing.h  ccompat.h  collectioniter.vala  commandline.cc  commandline.h  commandline.vala  compiler.py  constmap.h  constpairs.h  depfile.py  depmod.py  enum.cc  enum.h  enum.vala  extensiondataguest.vala  extensiondatahost.vala  genericmap.h  hashing.h  ipcresult.vala  jscompiler.py  listcollection.vala  meson.build  mixin.h  ptrarraycollection.vala  resource.vala  slice.h  soo.h  standardfiles.c  standardfiles.vala  timeoutcancellable.vala  value.h  variant.c  variant.vala  xxd.py
src/common/appbus/: address.cc  address.vala  connect.vala  connectclient.vala  connectserver.vala  cookie.vala  meson.build  ownname.cc  ownname.vala  postable.vala  postablecollection.cc  postablecollection.h  postablecollection.vala
src/common/asynchelp/: asyncdelay.cc  asynclock.cc  asynclock.h  meson.build
src/common/collection/: collection.vala  meson.build
src/common/collections/: genericsetcollection.vala  listcollection.vala  meson.build
src/common/enum/: enum.cc  enum.vala  meson.build
src/common/ffi/: destroynotify.cc  destroynotify.h  function.cc  function.h  functioncfi.h  functioncfitype.h  meson.build
src/common/hex/: hex.vala  meson.build
src/common/i18n/: main.cc  main.vala  meson.build
src/common/json/: meson.build  ptrarray.cc  takepointer.h  wakit-common-json.h
src/common/jsontypes/: meson.build  ptrarray.cc  ptrarray.h  ptrarray.vala  stringarray.vala
src/common/krypt/: cipher.vapi  cookie.vala  curve.vapi  dummy.vala  export.c  export.vapi  gcryptapi.cc  gcryptapi.h  gcryptapi.vala  gcryptapi.vapi  kdf.vapi  meson.build  prime.vapi  random.vapi  scalar.vapi
src/core/: application.vala  meson.build
src/core/appbus/: bus.vala  meson.build  ownname.cc  ownname.vala  postablecollection.cc  postablecollection.vala  watcher.vala
src/core/apploader/: loader.vala  meson.build
src/core/browser/: browser.css  browser.vala  dragcontroller.vala  meson.build  urirequest.h  urirequest.vala  widget.vala
src/core/configuration/: config.vala  meson.build
src/core/gui/: meson.build  message.vala
src/core/interfaces/: appbus.vala  browser.vala  browserconfig.vala  extensionhost.vala  meson.build  postable.vala  webview.vala
src/core/process/: impl.c  impl.unix.c  meson.build  process.vala
src/extension/: HostApplication.ts  ModuleRegistry.ts  ProxyBase.ts  ProxyBuilder.ts  ProxyLister.ts  TypenameBuilder.ts  bridge.ts  browserWindow.ts  constants.ts  extension.cc  extension.h  extension.hh  extension.js  extension.ts  extension.vala  meson.build  module.cc  module.ts  module.vala  resource.cc  resource.h  resource.vala  setup.js
src/extension/binding/: attributable.vala  binding.c  binding.vala  invocable.vala  klassreserve.vala  meson.build  signalable.c  signalable.cc  signalable.h  signalable.vala
src/extension/bindings/: bridge.vala  bridgelane.vala  bridgemodule.vala  bridgeservice.c  bridgeservice.vala  bridgetypes.vala  browserwindow.vala  dbusservice.vala  error.vala  meson.build  proxybase.vala  proxybuilder.vala  proxybuildertypes.cc  proxybuildertypes.h  proxybuildertypes.vala  proxylister.vala  testing.vala
src/extension/libraries/: logging.cc  logging.h  logging.js  logging.vala  meson.build  resources.vala
src/extension/utility/: chunked.py  error.c  error.vala  jscompiler.py  marshalling.h  marshalling.vala  marshallingpack.cc  marshallingunpack.cc  marshals.txt  meson.build  objectserializer.c  objectserializer.js  objectserializer.ts  objectserializer.vala  promise.cc  promise.h  promise.vala  webpageproxy.cc  webpageproxy.h  webpageproxy.vapi  xxd.py
src/host-simple/: application.cc  application.h  application.vala  host.vala  main.cc  meson.build  resources.xml  runner.sh.in  window.ui  window.vala
src/host-simple/configuration/: capture.vala  config.vala  meson.build  module.vala  modulearray.vala  modules.vala  scheme.vala  schemealias.cc  schemealias.h  (+5 more)
src/scripts/: apigen.py  apigendbus.cc  application.cc  application.h  depmod.py  fileutils.py  fixvapis.cc  fixvapis.peg  fixvapis.py  fixvapis.sh.in  grouped.py  introspectdbus.cc  meson.build  mkbundle.py  mkresources.py  tool.py  writer.py
src/utility/: bits.hh  enum.cc  enum.h  enum.vala  meson.build  timeoutcancellable.vala
tests/: bits.h  meson.build  meson.build.template  test.cc.template  testing.cc  testing.h  testing.hh
tests/common/: boxing.cc  meson.build
tests/core/: meson.build
tests/extension/: meson.build  testing.cc  testing.h  testing.js
tests/host/: meson.build
tests/pch/: pch.h
wakit/host/: application.cc  application.vala  main.cc  meson.build  runner.sh.in
(+407 files in other folders)
